--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <ul class="why-nntpchan no-style">
         <li>
             <h4>NNTPChan is decentralized and distributed</h4>
-            <p>Rather than relying on one provider who has full control over the management of the imageboard, NNTPChan allows delegation to virtually an unlimited number of "owners". Anyone can create an nnptchan node and join the Overchan network as they please. One node must simply share its peer information with another node.</p>
+            <p>Rather than rely on one provider who has full control over the management of the imageboard, NNTPChan allows delegation to virtually an unlimited number of "owners". Anyone can create an nnptchan node and join the Overchan network as they please. One node must simply share its peer information with another node.</p>
         </li>
         <li>
             <h4>NNTPChan is censorship resistant by design</h4>
