--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
         <li><a href="http://ev7fnjzjdbtu3miq.onion/">ev7fnjzjdbtu3miq.onion</a></li>
         <li><a href="http://f2bksxtwzmst2dhx.onion/">f2bksxtwzmst2dhx.onion</a></li>
         <li><a href="http://oniichanylo2tsi4.onion/">oniichanylo2tsi4.onion</a></li>
-        <li><a href="http://sfw.oniichanylo2tsi4.onion/">sfw.oniichanylo2tsi4.onion/</a></li>
+        <li><a href="http://sfw.oniichanylo2tsi4.onion/">sfw.oniichanylo2tsi4.onion</a></li>
+        <li><a href="http://sengxyxzydkf2ytc.onion/">sengxyxzydkf2ytc.onion</a></li>
     </ul>
     <h3>i2p</h3>
     <ul class="no-style">
