--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <li><a href="http://oniichanylo2tsi4.onion/">oniichanylo2tsi4.onion</a></li>
         <li><a href="http://sfw.oniichanylo2tsi4.onion/">sfw.oniichanylo2tsi4.onion</a></li>
         <li><a href="http://sengxyxzydkf2ytc.onion/">sengxyxzydkf2ytc.onion</a></li>
+        <li><a href="http://yqfbo7ghmwzotrml.onion/">yqfbo7ghmwzotrml.onion</a></li>
     </ul>
     <h3>i2p</h3>
     <ul class="no-style">
