add info about privacy

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             <h4>NNTPChan is easy to operate</h4>
             <p>NNTPChan requires few resources. The golang library is required to compile SRNDv2. PostgreSQL or Redis is required for storing posts. If you need any help, join us in #nntpchan on freenode or rizon or #overchan on <a href="https://geti2p.net/en/faq#irc">irc2p</a>. </p>
         </li>
+       <li>
+           <h4>NNTPChan protects user privacy by prioritizing compatibility with anonymizing networks</h4>
+           <p>NNTPChan is designed to work with anonymizing networks like Tor and i2p. The majority of the NNTPChan frontends are available only on the <a href="https://en.wikipedia.org/wiki/Dark_web">dark web</a>.</p> 
+       </li>
     </ul>
     <h2 id="node-list">NNTPChan nodes</h2>
     <h3>Clearweb</h3>
