add more info about customizations

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <p><a href="https://github.com/majestrate/nntpchan">NNTPChan</a> is the combination of the tried and true <a href="https://en.wikipedia.org/wiki/Network_News_Transfer_Protocol">network news transfer protocol</a> and the concept of an <a href="https://en.wikipedia.org/wiki/Imageboard">imageboard</a>. The core software, <a href="https://github.com/majestrate/srndv2">SRNDv2</a>, processes posts and then propagates them through out the Overchan network (this is a loose term that describes a federation of NNTPChan nodes).</p>
     <h2>Why NNTPChan?</h2>
     <p>There are a lot of reasons to use NNTPChan rather than legacy centralized imageboards:</p>
+    <blockquote>I'd just like to interject for a moment. What you're refering to as NNTPChan is, in fact, SRNDv2/NNTPChan or as I've recently taken to calling it, SRNDv2 plus NNTPChan. NNTPChan is not a meme machine unto itself, but rather another free component of a fully functioning SRNDv2 system made useful by the SRNDv2 corelibs, shell utilities and vital system components comprising a full image board as defined by neets.</blockquote>
     <ul class="why-nntpchan no-style">
         <li>
             <h4>NNTPChan is decentralized and distributed</h4>
@@ -42,7 +43,7 @@
         </li>
         <li>
             <h4>NNTPChan allows for a customized experience</h4>
-            <p>Each node can customize the design (CSS and templates) and from which boards it receives posts. As an example, <a href="https://2hu-ch.org">2hu-ch</a> does not accept posts to or from overchan.porn.</p>
+            <p>Each node can customize the design (CSS and templates) and from which boards it receives posts. As an example, <a href="https://2hu-ch.org">2hu-ch</a> does not accept posts to or from overchan.porn. NNTPChan also has a JSON API, supports lua scripting, and a development version of SRNDv2 supports webhooks.</p>
         </li>
         <li>
             <h4>NNTPChan is easy to operate</h4>
