--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         li p {
             margin-top: -1.5em;
         }
+        .obligatory {
+            font-style: italic;
+        }
     </style>
 </head>
 
@@ -31,7 +34,7 @@
     <p><a href="https://github.com/majestrate/nntpchan">NNTPChan</a> is the combination of the tried and true <a href="https://en.wikipedia.org/wiki/Network_News_Transfer_Protocol">network news transfer protocol</a> and the concept of an <a href="https://en.wikipedia.org/wiki/Imageboard">imageboard</a>. The core software, <a href="https://github.com/majestrate/srndv2">SRNDv2</a>, processes posts and then propagates them through out the Overchan network (this is a loose term that describes a federation of NNTPChan nodes).</p>
     <h2>Why NNTPChan?</h2>
     <p>There are a lot of reasons to use NNTPChan rather than legacy centralized imageboards:</p>
-    <blockquote>I'd just like to interject for a moment. What you're refering to as NNTPChan is, in fact, SRNDv2/NNTPChan or as I've recently taken to calling it, SRNDv2 plus NNTPChan. NNTPChan is not a meme machine unto itself, but rather another free component of a fully functioning SRNDv2 system made useful by the SRNDv2 corelibs, shell utilities and vital system components comprising a full image board as defined by neets.</blockquote>
+    <blockquote class="obligatory">I'd just like to interject for a moment. What you're refering to as NNTPChan is, in fact, SRNDv2/NNTPChan or as I've recently taken to calling it, SRNDv2 plus NNTPChan. NNTPChan is not a meme machine unto itself, but rather another free component of a fully functioning SRNDv2 system made useful by the SRNDv2 corelibs, shell utilities and vital system components comprising a full image board as defined by neets.</blockquote>
     <ul class="why-nntpchan no-style">
         <li>
             <h4>NNTPChan is decentralized and distributed</h4>
